Fix download button display on mobiles

--- a/_less/rtl.less
+++ b/_less/rtl.less
@@ -228,21 +228,19 @@ h2 .rssicon{
 	margin-left:0;
 	margin-right:10px;
 }
-.wallets>div>div>h2:first-child+div+div{
-	margin:2px 0 8px 0;
-}
 .wallets>div>div>h2:first-child+div+div>a,
 .wallets>div>div>h2:first-child+div+div>a:visited,
 .wallets>div>div>h2:first-child+div+div>a:link,
 .wallets>div>div>h2:first-child+div+div>a:active{
 	padding:0 8px;
+	margin:2px 0 8px 0;
 }
-.wallets>div>div>h2:first-child+div+div>a:first-child+a,
-.wallets>div>div>h2:first-child+div+div>a:first-child+a:visited,
-.wallets>div>div>h2:first-child+div+div>a:first-child+a:link,
-.wallets>div>div>h2:first-child+div+div>a:first-child+a:active{
-	margin-left:0;
-	margin-right:10px;
+.wallets>div>div>h2:first-child+div+div>a:first-child,
+.wallets>div>div>h2:first-child+div+div>a:first-child:visited,
+.wallets>div>div>h2:first-child+div+div>a:first-child:link,
+.wallets>div>div>h2:first-child+div+div>a:first-child:active{
+	margin-right:0;
+	margin-left:10px;
 }
 .wallets>div>div>h2:first-child+div+div+div+p{
 	padding-right:0;
