--- a/_less/screen.less
+++ b/_less/screen.less
@@ -1424,17 +1424,20 @@ table td,table th{
 .wallets>div>div>h2:first-child+div>img{
 	margin-left:4px;
 }
-.wallets>div>div>h2:first-child+div+div{
-	margin:10px 0 12px 0;
-	padding:0;
+.wallets>div>div>h2:first-child+div+div>a{
+	display:inline-block;
+	text-decoration:none;
+	margin:10px 0;
+	padding:4px 8px;
+	-webkit-border-radius:4px;
+	-moz-border-radius:4px;
+	border-radius:4px;
 }
 .wallets>div>div>h2:first-child+div+div>a:first-child,
 .wallets>div>div>h2:first-child+div+div>a:first-child:visited,
 .wallets>div>div>h2:first-child+div+div>a:first-child:link,
 .wallets>div>div>h2:first-child+div+div>a:first-child:active{
-	display:inline-block;
 	font-weight:bold;
-	text-decoration:none;
 	color:#fff;
 	background-color:#2c6fad;
 	background-image:-o-linear-gradient(bottom, #255f96 14%, #2c6fad 70%);
@@ -1443,10 +1446,7 @@ table td,table th{
 	background-image:-ms-linear-gradient(bottom, #255f96 14%, #2c6fad 70%);
 	background-image:linear-gradient(bottom, #255f96 14%, #2c6fad 70%);
 	border:1px solid #255f96;
-	padding:4px 8px;
-	-webkit-border-radius:4px;
-	-moz-border-radius:4px;
-	border-radius:4px;
+	margin-right:10px;
 }
 .wallets>div>div>h2:first-child+div+div>a:first-child:hover{
 	background-image:none;
@@ -1455,16 +1455,9 @@ table td,table th{
 .wallets>div>div>h2:first-child+div+div>a:first-child+a:visited,
 .wallets>div>div>h2:first-child+div+div>a:first-child+a:link,
 .wallets>div>div>h2:first-child+div+div>a:first-child+a:active{
-	display:inline-block;
 	font-weight:normal;
-	text-decoration:none;
 	color:#255f96;
 	border:1px solid #255f96;
-	margin-left:10px;
-	padding:4px 8px;
-	-webkit-border-radius:4px;
-	-moz-border-radius:4px;
-	border-radius:4px;
 }
 .wallets>div>div>h2:first-child+div+div+div{
 	margin:5px 0;
